fixed decoding issues and memory leaks

--- a/src/ffmpeg/h24Decoder/Makefile
+++ b/src/ffmpeg/h24Decoder/Makefile
@@ -1,6 +1,6 @@
 ### CUSTOMIZE BELOW HERE #######################################################
 
-FFMPEG_ROOT = /export/views/video/ffmpeg
+FFMPEG_ROOT = /workspace/ffmpeg/
 
 CC	= gcc
 CXX     = g++
