removed older compilers

--- a/src/base/tests/Makefile
+++ b/src/base/tests/Makefile
@@ -1,12 +1,12 @@
 ################################################################################
 ### CUSTOMIZE BELOW HERE #######################################################
 
-CC	= clang
-CXX     = clang++
+CC	= gcc 
+CXX     = g++
 TARGET=runBaseTest # define the name of the executable
 SOURCES=$(wildcard *.cpp ../src/*.cpp ../../libuv/src/*.cpp ../../libuv/src/unix/*.cpp  )
 
-CXXFLAGS   := -g  -stdlib=libc++ -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
+CXXFLAGS   := -g  -std=c++14 -Wno-inconsistent-missing-override -Wno-uninitialized
 
 
 CPPFLAGS   := -I../../json/include/ -I../../crypto/include/ -I../../http/include/ -I../../base/include/ -I../../net/include/ -I../../libuv/include -I../../libuv/src -I../../../build/ -I../../http_parser/ \
